# micrograd-plusplus

./: .gitignore  ARENA_MIGRATION.md  CMakeLists.txt  Makefile  Neuron.h  Value.cpp  Value.h  main.cpp  nn  notes.txt  output.txt  readme.md
.cache/clangd/index/: Value.cpp.A5F2F3CE9EF9E565.idx  Value.h.0B2A393EFA5356EF.idx  main.cpp.59C09E2EC7B98691.idx  value_test.cpp.BBE258E86F361410.idx
archive/: Neuron.h  Perceptron.h  Value.cpp  Value.h
core/: Neuron.h  Value.cpp  Value.h
core/Arena/: Arena.cpp  Arena.hpp
core/Shared/: types.hpp
core/Tensor/: Tensor.h
tests/: CMakeLists.txt  arena_test.cpp  neuron_test.cpp  value_test.cpp
